@@ -1,3 +1,9 @@
+2008-03-18  kitone  <kitone@gna.org>
+
+	* src/utility.cc:
+	* src/utility.h:
+	Add new split function (usplit) with a best support of Glib::ustring.
+
 2008-03-17  kitone  <kitone@gna.org>
 
 	* src/actions/WaveformRendererGL.cc:
